[gd_scene load_steps=3 format=2]

[ext_resource path="res://nodes/tag_match/console.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.247059, 0.247059, 0.247059, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.498039, 0.498039, 0.498039, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="TagMatch" type="PanelContainer"]
margin_top = 150.0
margin_right = 221.0
margin_bottom = 242.0
script = ExtResource( 1 )

[node name="TagMatchPlay" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 214.0
margin_bottom = 95.0
mouse_filter = 2

[node name="Header" type="HBoxContainer" parent="TagMatchPlay"]
margin_right = 207.0
margin_bottom = 14.0

[node name="Icon" type="Label" parent="TagMatchPlay/Header"]
self_modulate = Color( 0.701961, 0.701961, 0.701961, 1 )
margin_right = 4.0
margin_bottom = 14.0
text = "ï‚° "

[node name="CharacterProfile" type="HBoxContainer" parent="TagMatchPlay/Header"]
margin_left = 8.0
margin_right = 207.0
margin_bottom = 14.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Color" type="ColorRect" parent="TagMatchPlay/Header/CharacterProfile"]
margin_right = 14.0
margin_bottom = 14.0
rect_min_size = Vector2( 14, 14 )
mouse_filter = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 2.0
color = Color( 1, 1, 1, 0.709804 )

[node name="Spacer" type="MarginContainer" parent="TagMatchPlay/Header/CharacterProfile"]
margin_left = 18.0
margin_right = 22.0
margin_bottom = 14.0
rect_min_size = Vector2( 4, 0 )
size_flags_vertical = 3

[node name="Name" type="Label" parent="TagMatchPlay/Header/CharacterProfile"]
margin_left = 26.0
margin_right = 199.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 8.0
text = "{character-name}"
autowrap = true

[node name="TagKey" type="Label" parent="TagMatchPlay"]
margin_top = 18.0
margin_right = 207.0
margin_bottom = 40.0
custom_styles/normal = SubResource( 2 )
text = "{tag}"

[node name="Rows" type="VBoxContainer" parent="TagMatchPlay"]
margin_top = 44.0
margin_right = 207.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Matchables" type="VBoxContainer" parent="TagMatchPlay/Rows"]
margin_right = 207.0
margin_bottom = 44.0

[node name="Patterns" type="OptionButton" parent="TagMatchPlay/Rows/Matchables"]
margin_right = 207.0
margin_bottom = 20.0

[node name="Actions" type="HBoxContainer" parent="TagMatchPlay/Rows/Matchables"]
margin_top = 24.0
margin_right = 207.0
margin_bottom = 44.0
alignment = 2

[node name="Eol" type="Button" parent="TagMatchPlay/Rows/Matchables/Actions"]
self_modulate = Color( 0.815686, 0.0588235, 0.956863, 1 )
margin_left = 115.0
margin_right = 152.0
margin_bottom = 20.0
size_flags_horizontal = 8
size_flags_vertical = 4
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "EOL"

[node name="Label" type="Label" parent="TagMatchPlay/Rows/Matchables/Actions/Eol"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 1
text = "EOL"
align = 1
valign = 1

[node name="Match" type="Button" parent="TagMatchPlay/Rows/Matchables/Actions"]
self_modulate = Color( 0, 1, 0.952941, 1 )
margin_left = 156.0
margin_right = 207.0
margin_bottom = 20.0
size_flags_horizontal = 8
size_flags_vertical = 4
text = "Match"

[node name="Label" type="Label" parent="TagMatchPlay/Rows/Matchables/Actions/Match"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 1
text = "Match"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MatchedPattern" type="Label" parent="TagMatchPlay/Rows"]
visible = false
margin_top = 48.0
margin_right = 189.0
margin_bottom = 62.0
size_flags_horizontal = 3
text = "{Matched or EOL}"
autowrap = true
